--- a/public/horsservice.html
+++ b/public/horsservice.html
@@ -6,9 +6,32 @@
     <title>hors service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="server.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="/horsservice.css" />
     
 </head>
+<style>
+    header
+{
+    padding: 2%;
+    background-color: grey;
+    margin-top: -8px;
+}
+a{
+    text-decoration: none;
+    font-size: 145%;
+    margin-left: 2%;
+    color: white;
+
+}
+.home{
+    border-right: 1px solid white;
+    padding-right: 5%;
+}
+h1{
+    margin-left: 11%;
+    margin-top: 5%;
+    font-weight: normal;
+}
+</style>
 
 <body>
         <header>
